...
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/display_layout_margin">

    <TextView
        android:id="@+id/tv_expression"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/display_expression_text_view_margin_top"
        android:textSize="@dimen/display_expression_text_size"
        tools:text="1+1"
        android:ellipsize="start"
        android:lines="1"
        android:maxLines="1"
        android:gravity="end"/>

    <TextView
        android:id="@+id/tv_result"
        android:layout_marginTop="@dimen/display_result_text_view_margin_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/display_result_text_size"
        android:lines="1"
        android:maxLines="1"
...
